--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "connexion"
-version = "3.0.dev0"
+version = "3.0.6"
 description = "Connexion - API first applications with OpenAPI/Swagger"
 readme = "README.md"
 keywords = ["api", "swagger", "openapi"]
